# flask-jwt-auth-template

./: .dockerignore  .env.sample  .gitignore  Procfile  app.py  app_init.py  constants.py  danger.py  dev.py  docker-compose.yml  manage  requirements.txt  runner.py  util.py
api_handlers/: users.py
app/: gunicorn.conf.py  main.py
backend/: .env.sample  .gitignore  Dockerfile  debug.py  dev.py  fly.toml  migrate.sh  pyproject.toml  requirements.txt  runner.py  set_env.py
backend/app/: gunicorn.conf.py  main.py
backend/app/db/: errors.py  web.py
backend/app/db/mutations/: user.py  util.py
backend/app/db/queries/: user.py  util.py
backend/app/db/schemas/: user.py
backend/app/decorators/: api_response.py
backend/app/email/: auth.py
backend/app/exceptions/: __init__.py  app_exception.py
backend/app/internal/: constants.py  context.py
backend/app/internal/caching/: response_caching.py  safe_io.py
backend/app/internal/helpers/: __init__.py  client_errors.py  cors_headers.py  gen_id.py  guard.py  ip_resolver.py  json_response.py  sanitize.py  send_static_file.py
backend/app/internal/security/: auth_token.py  danger.py  email_verification.py
backend/app/media/: compress.py  config.py  upload.py
backend/app/middlewares/: __init__.py  _handler.py  cors.py  process_time.py
backend/app/models/: base.py  user.py
backend/app/routes/: common.py  user.py
backend/app/settings/: __init__.py  app.py  s3.py
docker/: Caddyfile  Dockerfile  Dockerfile.api  Dockerfile.dev  run.sh
routes/: user.py
server/: app.py  app_init.py  auth_token.py  constants.py  (+4 more)
(+14 files in other folders)
